# tunshare

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: app.rs  config.rs  doctor.rs  error.rs  health.rs  main.rs  session.rs
src/system/: dhcp.rs  dns.rs  firewall.rs  mod.rs  natpmp.rs  network.rs  sysctl.rs
src/ui/: debug.rs  doctor.rs  interface_select.rs  main_menu.rs  mod.rs  status.rs  theme.rs
src/ui/widgets/: card.rs  mod.rs
