[package]
name = "vpn-share"
version = "0.1.0"
edition = "2021"
description = "VPN sharing TUI for macOS - routes internet traffic through VPN and shares via LAN"
license = "MIT"
repository = "https://github.com/Mehdi-Hp/vpn-share"
homepage = "https://github.com/Mehdi-Hp/vpn-share"
authors = ["Mehdi-Hp"]
readme = "README.md"
keywords = ["vpn", "nat", "macos", "tui", "firewall"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.49", features = ["full", "process"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
libc = "0.2"

[profile.release]
strip = true
lto = true
