[package]
name = "tunshare"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "VPN sharing TUI for macOS - routes internet traffic through VPN and shares via LAN"
license = "MIT"
repository = "https://github.com/kumamaki/tunshare"
homepage = "https://github.com/kumamaki/tunshare"
authors = ["kumamaki"]
readme = "README.md"
keywords = ["vpn", "nat", "macos", "tui", "firewall"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.49", features = ["full", "process"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.release]
strip = true
lto = true
